--- a/project.config.json
+++ b/project.config.json
@@ -22,7 +22,7 @@
 			"disablePlugins": [],
 			"outputPath": ""
 		},
-		"useCompilerModule": false,
+		"useCompilerModule": true,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
@@ -60,9 +60,10 @@
 			"current": -1,
 			"list": [
 				{
-					"id": -1,
-					"name": "pages/category/index",
-					"pathName": "pages/category/index",
+					"id": 0,
+					"name": "pages/goods_list/index",
+					"pathName": "pages/goods_list/index",
+					"query": "",
 					"scene": null
 				}
 			]
