--- a/project.config.json
+++ b/project.config.json
@@ -22,7 +22,7 @@
 			"disablePlugins": [],
 			"outputPath": ""
 		},
-		"useCompilerModule": false,
+		"useCompilerModule": true,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
@@ -61,9 +61,9 @@
 			"list": [
 				{
 					"id": 0,
-					"name": "pages/goods_list/index",
-					"pathName": "pages/goods_list/index",
-					"query": "cid=5",
+					"name": "pages/search/index",
+					"pathName": "pages/search/index",
+					"query": "",
 					"scene": null
 				}
 			]
