--- a/project.config.json
+++ b/project.config.json
@@ -61,9 +61,9 @@
 			"list": [
 				{
 					"id": 0,
-					"name": "pages/cart/index",
-					"pathName": "pages/cart/index",
-					"query": "",
+					"name": "pages/goods_detail/index",
+					"pathName": "pages/goods_detail/index",
+					"query": "goods_id=54887",
 					"scene": null
 				}
 			]
