--- a/project.config.json
+++ b/project.config.json
@@ -61,8 +61,8 @@
 			"list": [
 				{
 					"id": 0,
-					"name": "pages/cart/index",
-					"pathName": "pages/cart/index",
+					"name": "pages/pay/index",
+					"pathName": "pages/pay/index",
 					"query": "",
 					"scene": null
 				}
