--- a/project.config.json
+++ b/project.config.json
@@ -26,8 +26,8 @@
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.11.0",
-	"appid": "wx2f822045dffe3e08",
+	"libVersion": "2.10.4",
+	"appid": "wxfb52f2d7b2f6123a",
 	"projectname": "%E9%BB%91%E9%A9%AC%E4%BC%98%E8%B4%AD",
 	"debugOptions": {
 		"hidedInDevtools": []
@@ -63,6 +63,13 @@
 					"id": 0,
 					"name": "pages/pay/index",
 					"pathName": "pages/pay/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/auth/index",
+					"pathName": "pages/auth/index",
 					"query": "",
 					"scene": null
 				}
