--- a/project.config.json
+++ b/project.config.json
@@ -72,6 +72,13 @@
 					"pathName": "pages/auth/index",
 					"query": "",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/cart/index",
+					"pathName": "pages/cart/index",
+					"query": "",
+					"scene": null
 				}
 			]
 		}
