--- a/project.config.json
+++ b/project.config.json
@@ -79,6 +79,12 @@
 					"pathName": "pages/cart/index",
 					"query": "",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/user/index",
+					"pathName": "pages/user/index",
+					"scene": null
 				}
 			]
 		}
